// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/search_bar/SearchBar should match snapshot with search 1`] = `
<div
  className="sidebar-right__table"
>
  <div
    className="sidebar-collapse__container"
  >
    <div
      className="sidebar-collapse"
      id="sidebarCollapse"
      onClick={[Function]}
    >
      <FormattedMessage
        defaultMessage="Back Icon"
        id="generic_icons.back"
        values={Object {}}
      >
        <Component />
      </FormattedMessage>
    </div>
  </div>
  <div
    className="search-form__container"
    id="searchFormContainer"
  >
    <form
      aria-labelledby="searchBox"
      autoComplete="off"
      className="search__form"
      onSubmit={[Function]}
      role="application"
      style={
        Object {
          "overflow": "visible",
        }
      }
    >
      <SearchIcon
        aria-hidden="true"
        className="search__icon"
      />
      <SuggestionBox
        aria-describedby="searchbar-help-popup"
        aria-label="Search"
        autoFocus={false}
        className="search-bar a11y__region"
        clearable={true}
        completeOnTab={true}
        containerClass=""
        data-a11y-sort-order="8"
        dateComponent={[Function]}
        delayInputUpdate={true}
        id="searchBox"
        isRHS={false}
        listComponent={[Function]}
        listStyle="top"
        listenForMentionKeyClick={false}
        onBlur={[Function]}
        onChange={[Function]}
        onClear={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        openOnFocus={false}
        openWhenEmpty={false}
        placeholder="Search"
        providers={
          Array [
            SearchDateProvider {
              "disableDispatches": false,
              "latestComplete": true,
              "latestPrefix": "",
              "requestStarted": false,
            },
            SearchChannelProvider {
              "autocompleteChannelsForSearch": [MockFunction],
              "disableDispatches": false,
              "latestComplete": true,
              "latestPrefix": "",
              "requestStarted": false,
            },
            SearchUserProvider {
              "autocompleteUsersInTeam": [MockFunction],
              "disableDispatches": false,
              "latestComplete": true,
              "latestPrefix": "",
              "requestStarted": false,
            },
          ]
        }
        renderDividers={true}
        renderNoResults={false}
        replaceAllInputOnSelect={false}
        requiredCharacters={1}
        tabIndex="0"
        type="search"
        value="test"
      />
    </form>
  </div>
</div>
`;

exports[`components/search_bar/SearchBar should match snapshot without search 1`] = `
<div
  className="sidebar-right__table"
>
  <div
    className="sidebar-collapse__container"
  >
    <div
      className="sidebar-collapse"
      id="sidebarCollapse"
      onClick={[Function]}
    >
      <FormattedMessage
        defaultMessage="Back Icon"
        id="generic_icons.back"
        values={Object {}}
      >
        <Component />
      </FormattedMessage>
    </div>
  </div>
  <div
    className="search-form__container"
    id="searchFormContainer"
  >
    <form
      aria-labelledby="searchBox"
      autoComplete="off"
      className="search__form"
      onSubmit={[Function]}
      role="application"
      style={
        Object {
          "overflow": "visible",
        }
      }
    >
      <SearchIcon
        aria-hidden="true"
        className="search__icon"
      />
      <SuggestionBox
        aria-describedby="searchbar-help-popup"
        aria-label="Search"
        autoFocus={false}
        className="search-bar a11y__region"
        clearable={true}
        completeOnTab={true}
        containerClass=""
        data-a11y-sort-order="8"
        dateComponent={[Function]}
        delayInputUpdate={true}
        id="searchBox"
        isRHS={false}
        listComponent={[Function]}
        listStyle="top"
        listenForMentionKeyClick={false}
        onBlur={[Function]}
        onChange={[Function]}
        onClear={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        openOnFocus={false}
        openWhenEmpty={false}
        placeholder="Search"
        providers={
          Array [
            SearchDateProvider {
              "disableDispatches": false,
              "latestComplete": true,
              "latestPrefix": "",
              "requestStarted": false,
            },
            SearchChannelProvider {
              "autocompleteChannelsForSearch": [MockFunction],
              "disableDispatches": false,
              "latestComplete": true,
              "latestPrefix": "",
              "requestStarted": false,
            },
            SearchUserProvider {
              "autocompleteUsersInTeam": [MockFunction],
              "disableDispatches": false,
              "latestComplete": true,
              "latestPrefix": "",
              "requestStarted": false,
            },
          ]
        }
        renderDividers={true}
        renderNoResults={false}
        replaceAllInputOnSelect={false}
        requiredCharacters={1}
        tabIndex="0"
        type="search"
        value=""
      />
      <Popover
        className="search-help-popover"
        id="searchbar-help-popup"
        placement="bottom"
        popoverSize="sm"
        popoverStyle="info"
      >
        <SearchHint
          withTitle={true}
        />
      </Popover>
    </form>
  </div>
</div>
`;

exports[`components/search_bar/SearchBar should match snapshot without search on focus 1`] = `
<div
  className="sidebar-right__table"
>
  <div
    className="sidebar-collapse__container"
  >
    <div
      className="sidebar-collapse"
      id="sidebarCollapse"
      onClick={[Function]}
    >
      <FormattedMessage
        defaultMessage="Back Icon"
        id="generic_icons.back"
        values={Object {}}
      >
        <Component />
      </FormattedMessage>
    </div>
  </div>
  <div
    className="search-form__container"
    id="searchFormContainer"
  >
    <form
      aria-labelledby="searchBox"
      autoComplete="off"
      className="search__form focused"
      onSubmit={[Function]}
      role="application"
      style={
        Object {
          "overflow": "visible",
        }
      }
    >
      <SearchIcon
        aria-hidden="true"
        className="search__icon"
      />
      <SuggestionBox
        aria-describedby="searchbar-help-popup"
        aria-label="Search"
        autoFocus={false}
        className="search-bar a11y__region"
        clearable={true}
        completeOnTab={true}
        containerClass=""
        data-a11y-sort-order="8"
        dateComponent={[Function]}
        delayInputUpdate={true}
        id="searchBox"
        isRHS={false}
        listComponent={[Function]}
        listStyle="top"
        listenForMentionKeyClick={false}
        onBlur={[Function]}
        onChange={[Function]}
        onClear={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        openOnFocus={false}
        openWhenEmpty={false}
        placeholder="Search"
        providers={
          Array [
            SearchDateProvider {
              "disableDispatches": false,
              "latestComplete": true,
              "latestPrefix": "",
              "requestStarted": false,
            },
            SearchChannelProvider {
              "autocompleteChannelsForSearch": [MockFunction],
              "disableDispatches": false,
              "latestComplete": true,
              "latestPrefix": "",
              "requestStarted": false,
            },
            SearchUserProvider {
              "autocompleteUsersInTeam": [MockFunction],
              "disableDispatches": false,
              "latestComplete": true,
              "latestPrefix": "",
              "requestStarted": false,
            },
          ]
        }
        renderDividers={true}
        renderNoResults={false}
        replaceAllInputOnSelect={false}
        requiredCharacters={1}
        tabIndex="0"
        type="search"
        value=""
      />
      <Popover
        className="search-help-popover visible"
        id="searchbar-help-popup"
        placement="bottom"
        popoverSize="sm"
        popoverStyle="info"
      >
        <SearchHint
          withTitle={true}
        />
      </Popover>
    </form>
  </div>
</div>
`;

exports[`components/search_bar/SearchBar should match snapshot without search on focus in mobile 1`] = `
<div
  className="sidebar-right__table"
>
  <div
    className="sidebar-collapse__container"
  >
    <div
      className="sidebar-collapse"
      id="sidebarCollapse"
      onClick={[Function]}
    >
      <FormattedMessage
        defaultMessage="Back Icon"
        id="generic_icons.back"
        values={Object {}}
      >
        <Component />
      </FormattedMessage>
    </div>
  </div>
  <div
    className="search-form__container"
    id="searchFormContainer"
  >
    <form
      aria-labelledby="searchBox"
      autoComplete="off"
      className="search__form focused"
      onSubmit={[Function]}
      role="application"
      style={
        Object {
          "overflow": "visible",
        }
      }
    >
      <SearchIcon
        aria-hidden="true"
        className="search__icon"
      />
      <SuggestionBox
        aria-describedby="searchbar-help-popup"
        aria-label="Search"
        autoFocus={false}
        className="search-bar a11y__region"
        clearable={true}
        completeOnTab={true}
        containerClass=""
        data-a11y-sort-order="8"
        dateComponent={[Function]}
        delayInputUpdate={true}
        id="searchBox"
        isRHS={false}
        listComponent={[Function]}
        listStyle="top"
        listenForMentionKeyClick={false}
        onBlur={[Function]}
        onChange={[Function]}
        onClear={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        openOnFocus={false}
        openWhenEmpty={false}
        placeholder="Search"
        providers={
          Array [
            SearchDateProvider {
              "disableDispatches": false,
              "latestComplete": true,
              "latestPrefix": "",
              "requestStarted": false,
            },
            SearchChannelProvider {
              "autocompleteChannelsForSearch": [MockFunction],
              "disableDispatches": false,
              "latestComplete": true,
              "latestPrefix": "",
              "requestStarted": false,
            },
            SearchUserProvider {
              "autocompleteUsersInTeam": [MockFunction],
              "disableDispatches": false,
              "latestComplete": true,
              "latestPrefix": "",
              "requestStarted": false,
            },
          ]
        }
        renderDividers={true}
        renderNoResults={false}
        replaceAllInputOnSelect={false}
        requiredCharacters={1}
        tabIndex="0"
        type="search"
        value=""
      />
    </form>
  </div>
</div>
`;
